fixup! fix search autocomplete wrap

--- a/www/less/header.less
+++ b/www/less/header.less
@@ -261,9 +261,12 @@
 							line-height: 19px;
 							margin-right: 8px;
 							display: block;
-							width: 92%;
+							width: 88%;
 							float: left;
-							strong {
+							white-space: nowrap;
+							overflow: hidden;
+							text-overflow: ellipsis;
+						  	strong {
 								font-weight: @font-weight-light;
 								color: @khan-black2;
 							}
